Update project layout

--- a/_layouts/project_single.html
+++ b/_layouts/project_single.html
@@ -13,4 +13,9 @@ layout: default
       {% endif %}
     {% endfor %}
   </header>
+
+  <div class="content">
+    <hr />
+    {{ content }}
+  </div>
 </article>
