--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,7 +4,7 @@ body {
   line-height: 1.5em;
   font-weight: 300;
   font-size: 16px;
-  color: #666;
+  color: #401515;
 }
 hr {
   margin-top: 20px;
@@ -20,7 +20,7 @@ span.time, span.categories {
   text-transform: uppercase;
 }
 h1, h2, h3 {
-  color: #696969;
+  color: #502f2f;
   font-weight: normal;
 }
 h1 {
@@ -32,7 +32,7 @@ h2, h3 {
 }
 a, a:link, a:active {
   text-decoration: none;
-  color: #203283;
+  color: #15235f;
 }
 a:hover {
   color: #d5c0c0;
@@ -87,16 +87,16 @@ div.post-content .btn-tags {
 div.col-sm-3 {
   margin-top: 100px;
   font-size: 11px;
-  color: #666;
+  color: #631515;
 }
 div.col-sm-3 strong {
   font-size: 16px;
-  color: #4A4A4A;
+  color: #462121;
   font-weight: normal;
 }
 div.col-sm-3 div.profile-about {
   margin-top: 10px;
-  color: #8C8C8C;
+  color: #b78c8c;
 }
 
 /* Pagination */
