--- a/static/css/syntax.css
+++ b/static/css/syntax.css
@@ -6,10 +6,10 @@
 .highlight .n { color: #f8f8f2 } /* Name */
 .highlight .o { color: #d67297 } /* Operator */
 .highlight .p { color: #f8f8f2 } /* Punctuation */
-.highlight .cm { color: #75715e } /* Comment.Multiline */
-.highlight .cp { color: #75715e } /* Comment.Preproc */
-.highlight .c1 { color: #75715e } /* Comment.Single */
-.highlight .cs { color: #75715e } /* Comment.Special */
+.highlight .cm { color: #aaa486 } /* Comment.Multiline */
+.highlight .cp { color: #aaa486 } /* Comment.Preproc */
+.highlight .c1 { color: #aaa486 } /* Comment.Single */
+.highlight .cs { color: #aaa486 } /* Comment.Special */
 .highlight .ge { font-style: italic } /* Generic.Emph */
 .highlight .gs { font-weight: bold } /* Generic.Strong */
 .highlight .kc { color: #66d9ef } /* Keyword.Constant */
