--- a/static/css/syntax.css
+++ b/static/css/syntax.css
@@ -1,5 +1,5 @@
 .highlight .hll { background-color: #030303f8 }
-.highlight .c { color: #75715e } /* Comment */
+.highlight .c { color: #c7bd93 } /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
 .highlight .k { color: #66d9ef } /* Keyword */
 .highlight .l { color: #ae81ff } /* Literal */
